<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarItem4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorDarkLightBlue"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    </android.support.v7.widget.Toolbar>


    <EditText
    android:id="@+id/et_username_login"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:layout_below="@id/toolbarItem4"
    android:layout_centerHorizontal="true"
    android:ems="10"
    android:inputType="textPersonName"
    android:hint="@string/username"
        />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/et_username_login"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/btn_login_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/cornerbutton1"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_forget_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_up_user"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite"
        android:layout_marginTop="35dp"
        android:textColor="@color/colorBlueLogo"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:text="@string/forget_your_password" />


    <Button
        android:id="@+id/btn_sign_up_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_user"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cornerbutton2"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:text="@string/create_one" />


    <Button
        android:id="@+id/btn_my_store_user_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cornerbutton"
        android:layout_marginTop="0dp"
        android:textColor="@color/colorWhite"
        android:text="@string/my_store" />


</RelativeLayout>