<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarItemOpenStore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorDarkLightBlue"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme">

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_name_open_store"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/store_name"
         />

    <EditText
        android:id="@+id/et_password_open_store"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_name_open_store"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/password"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btn_login_open_store"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_open_store"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/cornerbutton2"
        android:fontFamily="casual"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_sign_up_open_store"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_open_store"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/corner"
        android:textAllCaps="false"
        android:text="Sign Up for Free"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarItemOpenStore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/open_my_store"
        android:textColor="@color/colorRougeApp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_forgetPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/cornerbutton3"
        android:text="@string/forget_your_password"
        android:textAllCaps="false"
        android:textColor="@color/colorBlueLogo"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_below="@id/btn_sign_up_open_store"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>