<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarItemPaymentCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorDarkLightBlue"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_information"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textSize="18sp" />

   <android.support.v7.widget.CardView
       android:layout_margin="10dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">

<LinearLayout
    android:id="@+id/linearLayoutName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/et_name_order_process"
        android:layout_marginStart="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>

</LinearLayout>

           <LinearLayout
               android:id="@+id/linearLayoutEmail"
               android:layout_below="@id/linearLayoutName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/email"
                   android:textSize="18sp" />
               <EditText
                   android:id="@+id/et_email_order_process"
                   android:layout_marginStart="10dp"
                   android:layout_width="300dp"
                   android:layout_height="wrap_content"/>

           </LinearLayout>

<LinearLayout
android:id="@+id/linearLayoutPhone"
android:layout_below="@id/linearLayoutEmail"
android:layout_width="wrap_content"
android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone_number"
    android:textSize="18sp" />
<EditText
    android:id="@+id/et_phone_order_process"
    android:layout_marginStart="10dp"
    android:layout_width="220dp"
    android:layout_height="wrap_content"/>

</LinearLayout>
       </RelativeLayout>

   </android.support.v7.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_information"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorSilver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_item_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Items" />


        <TextView
            android:id="@+id/tv_qty_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            tools:text="Qty" />

        <TextView
            android:id="@+id/tv_price_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            tools:text="Price" />



    </LinearLayout>


    <com.braintreepayments.cardform.view.CardForm
        android:layout_margin="10dp"
        android:id="@+id/card_form"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:background="@drawable/cornerbutton"
        android:text="Buy now" />



    </LinearLayout>
</ScrollView>